firmware/lib/chapro.h


    typedef long int32_t;

    typedef unsigned long uint32_t;

    typedef uint32_t CHA_DATA;

    typedef void **CHA_PTR;


    /*****************************************************/

    // CHAPRO state

    typedef struct
    {
        int32_t arsiz; // total size of data (bytes)
        int32_t ptsiz; // number of data pointers
        void **cp;     // array of data pointers
        void *data;    // pointer to data
        double sr;     // sampling rate (kHz)
        int32_t cs;    // chunk size
        int32_t type;  // type of state
        int32_t entry; // entry point index
        void *rprt;    // pointer to report function
        void *proc;    // pointer to process function
    } CHA_STA;

    typedef struct
    {
        double attack;               // attack time (ms)
        double release;              // release time (ms)
        double maxdB;                // maximum signal (dB SPL)
        int32_t ear;                 // 0=left, 1=right
        int32_t nchannel;            // number of channels
        double cross_freq[DSL_MXCH]; // cross frequencies (Hz)
        double tkgain[DSL_MXCH];     // compression-start gain
        double cr[DSL_MXCH];         // compression ratio
        double tk[DSL_MXCH];         // compression-start kneepoint
        double bolt[DSL_MXCH];       // broadband output limiting threshold
    } CHA_DSL;


    typedef struct
    {
        double attack;  // attack time (ms)
        double release; // release time (ms)
        double fs;      // sampling rate (Hz)
        double maxdB;   // maximum signal (dB SPL)
        double tkgain;  // compression-start gain
        double tk;      // compression-start kneepoint
        double cr;      // compression ratio
        double bolt;    // broadband output limiting threshold
        // processing parameters
        double td;  // target delay
        int32_t nz; // filter order
        int32_t nw; // window size
        int32_t wt; // window type: 0=Hamming, 1=Blackman
    } CHA_WDRC;