firmware/src/sw_dsp/chapro.rs

pub type __clock_t = ::core::ffi::c_long;
pub type __rlim_t = ::core::ffi::c_ulong;
pub type __rlim64_t = ::core::ffi::c_ulong;
pub type __id_t = ::core::ffi::c_uint;
pub type __time_t = ::core::ffi::c_long;
pub type __useconds_t = ::core::ffi::c_uint;
pub type __suseconds_t = ::core::ffi::c_long;
pub type __daddr_t = ::core::ffi::c_int;
pub type __key_t = ::core::ffi::c_int;
pub type __clockid_t = ::core::ffi::c_int;
pub type __timer_t = *mut ::core::ffi::c_void;
pub type __blksize_t = ::core::ffi::c_long;
pub type __blkcnt_t = ::core::ffi::c_long;
pub type __blkcnt64_t = ::core::ffi::c_long;
pub type __fsblkcnt_t = ::core::ffi::c_ulong;
pub type __fsblkcnt64_t = ::core::ffi::c_ulong;
pub type __fsfilcnt_t = ::core::ffi::c_ulong;
pub type __fsfilcnt64_t = ::core::ffi::c_ulong;
pub type __fsword_t = ::core::ffi::c_long;
pub type __ssize_t = ::core::ffi::c_long;
pub type __syscall_slong_t = ::core::ffi::c_long;
pub type __syscall_ulong_t = ::core::ffi::c_ulong;
pub type __loff_t = __off64_t;
pub type __caddr_t = *mut ::core::ffi::c_char;
pub type __intptr_t = ::core::ffi::c_long;
pub type __socklen_t = ::core::ffi::c_uint;
pub type __sig_atomic_t = ::core::ffi::c_int;
pub type int_least8_t = __int_least8_t;
pub type int_least16_t = __int_least16_t;
pub type int_least32_t = __int_least32_t;
pub type int_least64_t = __int_least64_t;
pub type uint_least8_t = __uint_least8_t;
pub type uint_least16_t = __uint_least16_t;
pub type uint_least32_t = __uint_least32_t;
pub type uint_least64_t = __uint_least64_t;
pub type int_fast8_t = ::core::ffi::c_schar;
pub type int_fast16_t = ::core::ffi::c_long;
pub type int_fast32_t = ::core::ffi::c_long;
pub type int_fast64_t = ::core::ffi::c_long;
pub type uint_fast8_t = ::core::ffi::c_uchar;
pub type uint_fast16_t = ::core::ffi::c_ulong;
pub type uint_fast32_t = ::core::ffi::c_ulong;
pub type uint_fast64_t = ::core::ffi::c_ulong;
pub type intmax_t = __intmax_t;
pub type uintmax_t = __uintmax_t;
pub type CHA_DATA = u32;
pub type CHA_PTR = *mut *mut ::core::ffi::c_void;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct CHA_STA {
    pub arsiz: i32,
    pub ptsiz: i32,
    pub cp: *mut *mut ::core::ffi::c_void,
    pub data: *mut ::core::ffi::c_void,
    pub sr: f64,
    pub cs: i32,
    pub type_: i32,
    pub entry: i32,
    pub rprt: *mut ::core::ffi::c_void,
    pub proc_: *mut ::core::ffi::c_void,
}
#[test]
fn bindgen_test_layout_CHA_STA() {
    const UNINIT: ::core::mem::MaybeUninit<CHA_STA> = ::core::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::core::mem::size_of::<CHA_STA>(),
        64usize,
        concat!("Size of: ", stringify!(CHA_STA))
    );
    assert_eq!(
        ::core::mem::align_of::<CHA_STA>(),
        8usize,
        concat!("Alignment of ", stringify!(CHA_STA))
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).arsiz) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(CHA_STA),
            "::",
            stringify!(arsiz)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).ptsiz) as usize - ptr as usize },
        4usize,
        concat!(
            "Offset of field: ",
            stringify!(CHA_STA),
            "::",
            stringify!(ptsiz)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).cp) as usize - ptr as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(CHA_STA),
            "::",
            stringify!(cp)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).data) as usize - ptr as usize },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(CHA_STA),
            "::",
            stringify!(data)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).sr) as usize - ptr as usize },
        24usize,
        concat!(
            "Offset of field: ",
            stringify!(CHA_STA),
            "::",
            stringify!(sr)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).cs) as usize - ptr as usize },
        32usize,
        concat!(
            "Offset of field: ",
            stringify!(CHA_STA),
            "::",
            stringify!(cs)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).type_) as usize - ptr as usize },
        36usize,
        concat!(
            "Offset of field: ",
            stringify!(CHA_STA),
            "::",
            stringify!(type_)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).entry) as usize - ptr as usize },
        40usize,
        concat!(
            "Offset of field: ",
            stringify!(CHA_STA),
            "::",
            stringify!(entry)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).rprt) as usize - ptr as usize },
        48usize,
        concat!(
            "Offset of field: ",
            stringify!(CHA_STA),
            "::",
            stringify!(rprt)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).proc_) as usize - ptr as usize },
        56usize,
        concat!(
            "Offset of field: ",
            stringify!(CHA_STA),
            "::",
            stringify!(proc_)
        )
    );
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct CHA_DSL {
    pub attack: f64,
    pub release: f64,
    pub maxdB: f64,
    pub ear: i32,
    pub nchannel: i32,
    pub cross_freq: [f64; 32usize],
    pub tkgain: [f64; 32usize],
    pub cr: [f64; 32usize],
    pub tk: [f64; 32usize],
    pub bolt: [f64; 32usize],
}
#[test]
fn bindgen_test_layout_CHA_DSL() {
    const UNINIT: ::core::mem::MaybeUninit<CHA_DSL> = ::core::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::core::mem::size_of::<CHA_DSL>(),
        1312usize,
        concat!("Size of: ", stringify!(CHA_DSL))
    );
    assert_eq!(
        ::core::mem::align_of::<CHA_DSL>(),
        8usize,
        concat!("Alignment of ", stringify!(CHA_DSL))
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).attack) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(CHA_DSL),
            "::",
            stringify!(attack)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).release) as usize - ptr as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(CHA_DSL),
            "::",
            stringify!(release)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).maxdB) as usize - ptr as usize },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(CHA_DSL),
            "::",
            stringify!(maxdB)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).ear) as usize - ptr as usize },
        24usize,
        concat!(
            "Offset of field: ",
            stringify!(CHA_DSL),
            "::",
            stringify!(ear)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).nchannel) as usize - ptr as usize },
        28usize,
        concat!(
            "Offset of field: ",
            stringify!(CHA_DSL),
            "::",
            stringify!(nchannel)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).cross_freq) as usize - ptr as usize },
        32usize,
        concat!(
            "Offset of field: ",
            stringify!(CHA_DSL),
            "::",
            stringify!(cross_freq)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).tkgain) as usize - ptr as usize },
        288usize,
        concat!(
            "Offset of field: ",
            stringify!(CHA_DSL),
            "::",
            stringify!(tkgain)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).cr) as usize - ptr as usize },
        544usize,
        concat!(
            "Offset of field: ",
            stringify!(CHA_DSL),
            "::",
            stringify!(cr)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).tk) as usize - ptr as usize },
        800usize,
        concat!(
            "Offset of field: ",
            stringify!(CHA_DSL),
            "::",
            stringify!(tk)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).bolt) as usize - ptr as usize },
        1056usize,
        concat!(
            "Offset of field: ",
            stringify!(CHA_DSL),
            "::",
            stringify!(bolt)
        )
    );
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct CHA_WDRC {
    pub attack: f64,
    pub release: f64,
    pub fs: f64,
    pub maxdB: f64,
    pub tkgain: f64,
    pub tk: f64,
    pub cr: f64,
    pub bolt: f64,
    pub td: f64,
    pub nz: i32,
    pub nw: i32,
    pub wt: i32,
}
